--- a/css/06-news.css
+++ b/css/06-news.css
@@ -152,7 +152,7 @@ margin: 120px 0 0 375px;
 }
 
 .news-cards .unique-black {
-  font-family: Times, serif;
+  font-family: serif, Times ;
   font-size: 16px;
   padding-bottom: 30px;
 }
