--- a/css/07-news-detail.css
+++ b/css/07-news-detail.css
@@ -62,6 +62,7 @@
   font-weight: 400;
   margin: 0.5em 0 0.75em 0;
   color: #464646;
+  font-size: 42px;
 }
 
 .news-content {
@@ -71,11 +72,12 @@
 .news-content h2 {
   margin: 1em 0 0 0;
   color: #464646;
+  font-size: 30px;
 }
 
 .news-content p {
   color: #959595;
-  font-size: 1.25em;
+  font-size: 18px;
 }
 
 .article-date {
@@ -84,6 +86,7 @@
   display: inline-block;
   margin: 1.5em 0;
   padding: 0.75em;
+  font-size: 12px;
 }
 
 .social-icons {
