--- a/css/08-news-image.css
+++ b/css/08-news-image.css
@@ -18,12 +18,6 @@
   background-color: #363636;
 }
 
-#header-module .navbar .active {
-  color: #ffffff;
-  font-weight: bold;
-  border-bottom: 3px solid #ffffff;
-}
-
 #header-module .logo {
   background: url("../assets/logo_160.png") no-repeat 0 -40px;
   height: 69px;
@@ -45,11 +39,13 @@
   font-weight: 400;
   margin: 0.5em 0 0.75em 0;
   color: #464646;
+  font-size: 42px;
 }
 
 .news-content h2 {
   margin: -0.05em 0 0 0;
   color: #464646;
+  font-size: 30px;
 }
 
 .article-date {
@@ -58,12 +54,14 @@
   display: inline-block;
   margin: 1.5em 0;
   padding: 0.75em;
+  font-size: 12px;
 }
 
 .social-icons {
   display: inline;
   margin: 0 0 0 1.5em;
   color: #d7d7d7;
+  font-size: 13px;
 }
 
 .social-icons a {
@@ -89,6 +87,7 @@
 .news-content p {
   color: #959595;
   font-size: 1.25em;
+  font-size: 17px;
 }
 
 /* Popular/Recent Column */
@@ -100,11 +99,13 @@
 
 .popular-header {
   color: #c0a878;
+  font-size: 17px;
 }
 
 .recent-header {
   background-color: #363636;
   color: #ffffff;
+  font-size: 17px;
 }
 
 .top-paragraph {
@@ -117,6 +118,7 @@ section p {
 
 section time {
   color: #c5c5c5;
+  font-size: 13px;
 }
 
 .gold-text {
