--- a/css/01-index.css
+++ b/css/01-index.css
@@ -125,8 +125,8 @@ p {
   margin-bottom: 5%;
 }
 
-.box-title {
-  font-size: 16px;
+.box .title {
+  font-size: 20px;
 }
 
 .box-desc {
@@ -140,6 +140,13 @@ p {
 
 .nap p {
     margin: 0px 0px 5px 0px ;
+    width: 90%;
+
+}
+
+.nap .title {
+    font-size: 24px;
+    font-weight: 800;
 
 }
 
@@ -154,25 +161,40 @@ p {
 }
 
 .nap .col1 {
-  margin-bottom: 20px;
+  margin-bottom: 3%;
+  padding-right: 0;
 }
 .nap .text {
   font-family: Helvetica,arial,freesans,clean,sans-serif;
-  font-size: 11px;
+  font-size: 14px;
   text-align: left;
 }
 
+.nap .read-more {
+  font-family: Helvetica,arial,freesans,clean,sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  text-align: left;
+}
+
+.nap .col2 {
+  width: 48%;
+  padding-right: 0;
+}
 .nap .headln {
-    font-size: 12px;
+    font-size: 18px;
     text-align: left;
     margin-top: 0;
     font-weight: bold;
-
+    width: 100%;
 }
 
+.nap .products {
+  padding-top: 2%;
+}
 .nap .btn-view-all {
   display: inline-block;
-  margin: 20px 0 0 0;
+  margin: 10px 0 0 0;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.0;
@@ -296,12 +318,6 @@ footer .logo {
 footer .center-block {
   margin-top: 40%;
 }
-
-/* footer .vertical-center {
-  display: inline-block;
-  float: none;
-  vertical-align: middle;
-} */
 
 footer .bar {
   background-color: #3f3f3f;
