--- a/css/01-index.css
+++ b/css/01-index.css
@@ -146,96 +146,207 @@ p {
 
 /* News, Announcements, and Products */
 
-.nap p {
-    margin: 0px 0px 5px 0px ;
+.nap .blank-nap {
+  width: 12.499%;
 }
-.nap .box {
-  border: 1px solid grey;
-  margin-top: 0;
-  padding: 0;
-  padding: 8px 12px 8px 20px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+
+.nap p {
+  margin: 0px 0px 5px 0px ;
+  width: 100%;
 }
 
 .nap .title {
   color: #8e97ac;
+  font-size: 20px;
+  font-weight: 800;
 }
 
 .nap .title-announce {
   color: #3faf6c;
+  font-size: 20px;
+  font-weight: 800;
 }
 
 .nap .title-prod {
   color: #009fe3;
+  font-size: 20px;
+  font-weight: 800;
 }
+
+.nap .box {
+  border: 1px solid lightgray;
+  margin-top: 0;
+  padding: 8px 10px 8px 20px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
 .nap .col1 {
-  margin-bottom: 20px;
+  margin-bottom: 3%;
+  padding-right: 0;
 }
+
 .nap .text {
-  font-family: Helvetica,arial,freesans,clean,sans-serif;
-  font-size: 11px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 14px;
   text-align: left;
 }
+
+.nap .read-more {
+  color: #8e97ac;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 800;
+  text-align: left;
+}
+
+.nap .col2 {
+  width: 48%;
+  padding-right: 0;
+}
+
 .nap .headln {
-    font-size: 12px;
+    font-size: 18px;
     text-align: left;
     margin-top: 0;
-    font-weight: bold;
+    font-weight: 800;
+    width: 100%;
 }
+
+.nap .products {
+  padding-top: 10%;
+}
+
+.nap .prod-p {
+  margin: 0 0 11% 0;
+}
+
 .nap .btn-view-all {
   display: inline-block;
-  margin: 20px 0 0 0;
+  margin: 0 0 1% 0;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.0;
   text-align: center;
   vertical-align: middle;
-  border: 1px solid black;
+  border: 1px solid lightgray;
   border-radius: 1px;
   padding: 10px 16px;
 }
+
 .nap .top-buffer {
   margin-top:0;
 }
-.nap .border-line{
+
+.nap .border-line {
   display: block;
-  width: 90%;
+  width: 100%;
   height: 1px;
-  background: black;
+  background:lightgray;
   margin: 2px auto;
 }
+
 /* Footer */
 
-footer h4 {
-  font-color: #959595;
+footer .blank-column {
+  width: 12.499%;
 }
 
+footer h4 {
+  color: #acacac;
+  font-family: Arial, sans-serif;
 }
+
+footer .text {
+  color: #959595;
+  font-size: 12px;
+}
+
 footer .footer-top{
-  background-color: #959595;
+  background-color: #383838;
   padding-bottom: 10px;
 }
 
-
 footer .about {
+  margin-left: -10px;
+  margin-right: 55px;
+  padding-left: 0;
+  padding-right: 0;
   word-wrap: break-word;
-  margin-right: 30px;
-  color: #959595;
 }
+
+footer .fa-caret-right {
+  margin-left: 10px;
+  background-color: black;
+ }
+
 footer ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-footer .fa-caret-right {
-  margin-left: 10px;
-  background-color: black;
+
+footer .hotel {
+  margin-right: 55px;
+  padding-left: 50px;
+  padding-right: 0;
 }
-footer .logo{
-  margin-right: 5px;
+
+footer .contact-us {
+  margin-right: 55px;
+  padding-left: 0;
+  padding-right: 0;
 }
+
+footer .flex-container {
+  align-content: space-between;
+  display: flex;
+  justify-content: center;
+}
+
+footer .icon {
+  color: #c0a878;
+}
+
+footer .border-line {
+  background-color: #959595;
+  display: block;
+  width: 90%;
+  height: 1px;
+}
+
+footer .contact-type {
+  color: #c0a878;
+  font-size: 11px;
+  text-align: right;
+}
+
+footer .information {
+  color: #acacac;
+  font-size: 11px;
+  padding-left: 20px;
+}
+
+footer .copyright {
+  font-size: 11px;
+  margin-left: -19px;
+  margin-right: 0;
+}
+
+footer .designer {
+  font-size: 11px;
+  margin-right: -30px;
+}
+
+footer .logo {
+  padding-right: 0;
+}
+
+footer .center-block {
+  margin-top: 40%;
+}
+
 footer .bar {
-  background-color: #363636;;
+  background-color: #3f3f3f;
+  color:  #9a9a9a;
   padding-top: 10px;
 }
