Final-final res mod fixes

--- a/css/01-index.css
+++ b/css/01-index.css
@@ -88,16 +88,16 @@
   background-color: #f7f7f7;
   height: 85px;
 }
+
 .arrival .input-box  {
   width: 100px;
-  margin: 10px 0 0 0px;
+  margin: 11px 0 0 0px;
   border: 1px solid lightgray;
-
 }
 
 .going .input-box  {
   width: 100px;
-  margin: 10px 0 0 0px;
+  margin: 11px 0 0 0px;
   border: 1px solid lightgray;
 }
 
@@ -132,7 +132,7 @@
 .room,
 .person,
 .child,
-.day, p {
+.day {
   font-family: sans-serif;
   margin: 0 0 11px 0px;
 }
@@ -140,6 +140,13 @@
 .dropdown-toggle {
   margin: 0 0 0 -4px;
   background: #e2e2e2;
+}
+
+.rm-align,
+.person-align,
+.child-align,
+.day-align {
+  margin-left: 7px;
 }
 /*-----------------------*/
 
