--- a/css/06-news.css
+++ b/css/06-news.css
@@ -1,5 +1,3 @@
-
-
 /* Header and Navigation Bar */
 
 #header-module .navbar {
@@ -127,6 +125,7 @@ margin: 120px 0 0 375px;
   text-align: left;
   color: #959595;
 }
+
 .news-cards .btn-read-more {
   background-color: #c0a878;
   border: none;
@@ -138,8 +137,8 @@ margin: 120px 0 0 375px;
   padding: 10px 16px;
   text-align: left;
   text-transform: uppercase;
-
 }
+
 .news-cards .t-unique-box {
   background-color: #363636;
   border: 1px solid #17202a;
@@ -148,7 +147,6 @@ margin: 120px 0 0 375px;
   padding: 60px 10px 15px 10px;
   text-align: center;
   width: 210px;
-
 }
 
 .news-cards .unique-black {
@@ -174,16 +172,15 @@ margin: 120px 0 0 375px;
 }
 
 .news-cards .btn-read-more {
-    background-color: #c0a878;
-    border: 1px solid #17202a
-    color: #ffffff;
-    font-size: 12px;
-    font-weight: normal;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding: 10px 16px;
-    text-align: center;
-
+  background-color: #c0a878;
+  border: 1px solid #17202a;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: normal;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 10px 16px;
+  text-align: center;
 }
 
 .news-cards .btn-view-all {
@@ -199,5 +196,112 @@ margin: 120px 0 0 375px;
   margin-left: 20px;
   text-align: center;
   vertical-align: middle;
+}
 
+/* Footer */
+
+footer h4 {
+  color: #acacac;
+  font-family: Arial, sans-serif;
+}
+
+footer .text {
+  color: #959595;
+  font-size: 12px;
+}
+
+footer .footer-top {
+  background-color: #383838;
+  padding-bottom: 10px;
+}
+
+footer .about {
+  margin-left: -10px;
+  margin-top: 1.5%;
+  padding-left: 0;
+  padding-right: 0;
+  word-wrap: break-word;
+}
+
+footer .fa-caret-right {
+  margin-left: 10px;
+ }
+
+footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+footer .hotel {
+  margin-top: 1.5%;
+  padding-left: 40px;
+}
+
+footer .contact-us {
+  margin-top: 1.5%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+footer .flex-container {
+  align-content: space-between;
+  display: flex;
+}
+
+footer .icon {
+  color: #c0a878;
+}
+
+footer .border-line {
+  background-color: #959595;
+  display: block;
+  width: 90%;
+  height: 1px;
+}
+
+footer .contact-type {
+  color: #c0a878;
+  font-size: 11px;
+  text-align: right;
+}
+
+footer .information {
+  color: #acacac;
+  font-size: 11px;
+  padding-left: 20px;
+}
+
+footer .copyright {
+  font-size: 12px;
+  margin-left: -25px;
+  margin-right: 0;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+footer .designer {
+  font-size: 12px;
+  margin-right: 0;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+footer .logo {
+  padding-right: 0;
+}
+
+footer .center-block {
+  margin-top: 40%;
+  margin-right: 0;
+}
+
+footer .bar {
+  background-color: #3f3f3f;
+  color:  #9a9a9a;
+  padding-top: 10px;
+}
+
+footer .footer-read {
+  margin-top: 20%;
 }
