--- a/css/09-services.css
+++ b/css/09-services.css
@@ -1,4 +1,3 @@
-
 /* Header and Navigation Bar */
 
 #header-module .navbar {
@@ -33,7 +32,6 @@
 }
 
 /* About Us Content */
-
 
 .about-us-back {
   padding: 0.20%;
@@ -79,6 +77,7 @@ h1 {
   margin-top: 20px;
   font-size: 20px;
 }
+
 .icons-row {
   background: white;
   margin-top: 15px;
@@ -106,14 +105,12 @@ h1 {
 .png-rows {
   margin: 30px 2px 5px 2px;
   height: 180px;
-
 }
 
 .blank-img {
   margin-top: -100px;
   margin-left: 63px;
 }
-
 
 .spacing {
   height: 100px;
@@ -145,6 +142,7 @@ h1 {
   font-size: 14px;
   margin-top: -20px;
 }
+
 .air-conditioner {
   background: #8d5ba1;
   height: 18px;
@@ -158,4 +156,112 @@ h1 {
 
 .free-breakfast {
   margin-left: -4px;
+}
+
+/* Footer */
+
+footer h4 {
+  color: #acacac;
+  font-family: Arial, sans-serif;
+}
+
+footer .text {
+  color: #959595;
+  font-size: 12px;
+}
+
+footer .footer-top {
+  background-color: #383838;
+  padding-bottom: 10px;
+}
+
+footer .about {
+  margin-left: -10px;
+  margin-top: 1.5%;
+  padding-left: 0;
+  padding-right: 0;
+  word-wrap: break-word;
+}
+
+footer .fa-caret-right {
+  margin-left: 10px;
+ }
+
+footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+footer .hotel {
+  margin-top: 1.5%;
+  padding-left: 40px;
+}
+
+footer .contact-us {
+  margin-top: 1.5%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+footer .flex-container {
+  align-content: space-between;
+  display: flex;
+}
+
+footer .icon {
+  color: #c0a878;
+}
+
+footer .border-line {
+  background-color: #959595;
+  display: block;
+  width: 90%;
+  height: 1px;
+}
+
+footer .contact-type {
+  color: #c0a878;
+  font-size: 11px;
+  text-align: right;
+}
+
+footer .information {
+  color: #acacac;
+  font-size: 11px;
+  padding-left: 20px;
+}
+
+footer .copyright {
+  font-size: 12px;
+  margin-left: -25px;
+  margin-right: 0;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+footer .designer {
+  font-size: 12px;
+  margin-right: 0;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+footer .logo {
+  padding-right: 0;
+}
+
+footer .center-block {
+  margin-top: 40%;
+  margin-right: 0;
+}
+
+footer .bar {
+  background-color: #3f3f3f;
+  color:  #9a9a9a;
+  padding-top: 10px;
+}
+
+footer .footer-read {
+  margin-top: 20%;
 }
