--- a/css/01-index.css
+++ b/css/01-index.css
@@ -102,11 +102,8 @@
 .box {
   border: 10px solid black;
   margin: 4px;
-  padding: 4px;
-}
-
-.padding {
-  width: 12.4999995%;
+  padding: 50px 10px 10px 10px;
+  width: 22.165%;
 }
 
 p {
@@ -131,11 +128,14 @@ p {
 
 .box-desc {
   color: #a8a8a8;
+  font-size: 12px;
+  margin-left: 20%;
+  width: 60%;
 }
 
 /* News, Announcements, and Products */
-.nap .blank-nap {
-  width: 12.499%;
+.nap {
+  margin-top: 2%;
 }
 
 .nap p {
@@ -145,16 +145,24 @@ p {
 }
 
 .nap .title {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 800;
 
 }
 
 .nap .box {
-  border: 1px solid grey;
+  border: 1px solid lightgrey;
   margin-top: 0;
-  padding: 0;
-  padding: 8px 12px 8px 20px;
+  padding: 8px 12px 8px 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+
+}
+
+.nap .apbox {
+  border: 1px solid lightgrey;
+  margin-top: 0;
+  padding: 8px 0 8px 0px;
   margin-right: 10px;
   margin-bottom: 10px;
 
@@ -166,14 +174,14 @@ p {
 }
 .nap .text {
   font-family: Helvetica,arial,freesans,clean,sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   text-align: left;
 }
 
 .nap .read-more {
   font-family: Helvetica,arial,freesans,clean,sans-serif;
   font-weight: 800;
-  font-size: 14px;
+  font-size: 12px;
   text-align: left;
 }
 
@@ -182,7 +190,7 @@ p {
   padding-right: 0;
 }
 .nap .headln {
-    font-size: 18px;
+    font-size: 14px;
     text-align: left;
     margin-top: 0;
     font-weight: bold;
@@ -219,10 +227,6 @@ p {
 
 /* Footer */
 
-footer .blank-column {
-  width: 12.499%;
-}
-
 footer h4 {
   color: #acacac;
   font-family: Arial, sans-serif;
@@ -240,7 +244,6 @@ footer .footer-top{
 
 footer .about {
   margin-left: -10px;
-  margin-right: 55px;
   padding-left: 0;
   padding-right: 0;
   word-wrap: break-word;
@@ -258,13 +261,10 @@ footer ul {
 }
 
 footer .hotel {
-  margin-right: 55px;
-  padding-left: 50px;
-  padding-right: 0;
+  padding-left: 40px;
 }
 
 footer .contact-us {
-  margin-right: 55px;
   padding-left: 0;
   padding-right: 0;
 }
@@ -272,7 +272,7 @@ footer .contact-us {
 footer .flex-container {
   align-content: space-between;
   display: flex;
-  justify-content: center;
+
 }
 
 footer .icon {
@@ -300,14 +300,19 @@ footer .information {
 }
 
 footer .copyright {
-  font-size: 11px;
-  margin-left: -19px;
+  font-size: 12px;
+  margin-left: -25px;
   margin-right: 0;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 footer .designer {
-  font-size: 11px;
+  font-size: 12px;
   margin-right: -30px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+
 
 }
 
@@ -317,11 +322,11 @@ footer .logo {
 
 footer .center-block {
   margin-top: 40%;
+  margin-right: 0;
 }
 
 footer .bar {
   background-color: #3f3f3f;
   color:  #9a9a9a;
   padding-top: 10px;
-
 }
