--- a/css/01-index.css
+++ b/css/01-index.css
@@ -38,54 +38,154 @@
   color: #ffffff;
 }
 
+.wrapper {
+  margin: 15% 0 0 0;
+}
+
 .explore-button {
   border-radius: 0;
+  margin: 0.5em 0 0 0;
+}
+
+.rates-banner {
+  margin: 0.15em 0;
+  font-weight: 1000;
+  width: 80%;
 }
 
 .carousel {
   position: relative;
-  top: 250px;
+  top: 175px;
+}
+
+.summer-images {
+  margin: 1.5em 0 0 0;
 }
 
 .summer-images img {
-  margin: 0.5em;
+  margin: 0.25em;
 }
 
 /* Reservations */
 
-.header-section {
-  color: #959595;
+.hotel-column {
+  height: 30px;
+  font-size: 18px;
+  background-color: #f7f7f7;
+}
+
+.reservation-head {
   background-color: #313131;
-  padding: 5% 20%;
 }
 
-#hotel-reservation-module .module-content,
-#hotel-reservation-module .module-tab .col-md-1 {
-  color: #959595;
-  background-color: #fafafa;
+.reservation-content  {
+  color: #f7f7f7;
+  background-color: #313131;
 }
 
-.btn-group {
-  margin-right: 15px;
+/*---input box width---*/
+.arrival .input-box  {
+  width: 100px;
+  height: 35px;
+  margin: 0px 0 0 0px;
+  border: 1px solid lightgray;
 }
 
-.resize {
-  color: #636363;
-  width: 11%;
+.going .input-box  {
+  width: 100px;
+  height: 35px;
+  margin: 0px 0 0 0px;
+  border: 1px solid lightgray;
 }
 
-#button-names {
-  margin-left: 5px;
-  padding: 10px;
+.fa-calendar {
+  margin-left: 80px;
+  margin-top: -55px;
+  color: #919191;
+  border: 0px solid black;
 }
 
-.input-row {
-  margin-left: 5px;
-  margin-bottom: 25px;
+/*--Res Mod Gray Background--*/
+.arrival {
+  background-color: #f7f7f7;
 }
 
-.fa-building {
-  color: #5f5f5f;
+.going {
+  background-color: #f7f7f7;
+}
+
+.room {
+  background-color: #f7f7f7;
+  height: 85px;
+}
+
+.person-box {
+  background-color: #f7f7f7;
+  height: 85px;
+}
+
+.child-box {
+  background-color: #f7f7f7;
+  height: 85px;
+}
+
+.day-box {
+  background-color: #f7f7f7;
+  height: 85px;
+}
+
+/*---btn-group---*/
+
+.btn-group-room,
+.btn-group-person,
+.btn-group-child,
+.btn-group-day   {
+  margin: 11px 0 0 5px;
+  border: 0px solid black;
+}
+
+.child-box,
+.person-box,
+.day-box {
+  margin: 0px 0 0 -15px;
+}
+
+.reservation-content p {
+  color: #919191;
+}
+
+.room,
+.person,
+.child,
+.day {
+  font-family: sans-serif;
+  margin: 0 0 11px 0px;
+}
+
+.dropdown-toggle {
+  margin: 0 0 0 -4px;
+  background: #e2e2e2;
+}
+
+.rm-align,
+.person-align,
+.child-align,
+.day-align {
+  margin-left: 7px;
+}
+
+.search-button {
+  background: #8e8b8b;
+  background-color: #f7f7f7;
+  width: 145px;
+  height: 85px;
+  padding: 30px 0 0px 20px;
+  margin: 0px 14px 15px 0px;
+}
+
+.btn-sm {
+  background-color: #8e8b8b;
+  margin: 5px 0 0 0;
 }
 
 /* Icons */
@@ -109,14 +209,11 @@
 
 /* About Hotel */
 
-.hotel .box {
+.hotel-box {
   border: 10px solid black;
   margin: 4px;
-  padding: 4px;
-}
-
-.padding {
-  width: 12.4999995%;
+  padding: 50px 10px 10px 10px;
+  width: 22.165%;
 }
 
 p {
@@ -126,21 +223,24 @@ p {
 .about-hotel .about-hotel-title {
   font-size: 40px;
   font-family: Arial, sans-serif;
-  color: #c0a878;
+  color: #e1d8c6;
 }
 
 .about-home-desc {
   font-size: 18px;
-  color: #959595;
+  color: #a8a8a8;
   margin-bottom: 5%;
 }
 
-.box-title {
-  font-size: 16px;
+.box .title {
+  font-size: 20px;
 }
 
 .box-desc {
-  color: #959595;
+  color: #a8a8a8;
+  font-size: 12px;
+  margin-left: 20%;
+  width: 60%;
 }
 
 /* News, Announcements, and Products */
