--- a/css/01-index.css
+++ b/css/01-index.css
@@ -279,7 +279,7 @@ p {
 
 .nap .box {
   border: 1px solid lightgray;
-  margin-top: 0;
+  margin-top: 40px;
   padding: 8px 10px 8px 20px;
   margin-right: 20px;
   margin-bottom: 20px;
