Add background image and replace # with js void

--- a/css/03-contact.css
+++ b/css/03-contact.css
@@ -1,3 +1,8 @@
+/* Background Image */
+
+.container-fluid {
+  background-image: url(../assets/background-texture.png);
+}
 
 /* Header and Navigation Bar */
 
