--- a/css/02-about-us.css
+++ b/css/02-about-us.css
@@ -1,3 +1,10 @@
+/* Background Image */
+
+.container-fluid,
+.icons-row {
+  background-image: url(../assets/background-texture.png);
+}
+
 /* Header and Navigation Bar */
 
 #header-module .navbar {
@@ -33,11 +40,9 @@
 
 /* About Us */
 
-
 .about-us-back {
   padding: 0.20%;
   background: #313131;
-
 }
 
 .about-us-desc strong {
@@ -90,17 +95,9 @@ h1 {
   margin-top: 20px;
   margin-bottom: 160px;
 }
+
 .icons-row {
-  background: white;
   margin-top: 70px;
-}
-
-.icon-card {
-  background: white;
-}
-
-.icon-desc {
-  background: white;
 }
 
 .team-overview {
@@ -117,7 +114,6 @@ h1 {
 .png-rows {
   margin: 30px 0px 5px 0px;
   height: 180px;
-
 }
 
 .blank-img {
