--- a/css/05-products.css
+++ b/css/05-products.css
@@ -1,3 +1,9 @@
+/* Background Image */
+
+.container-fluid {
+  background-image: url(../assets/background-texture.png);
+}
+
 /* Header and Navigation Bar */
 
 #header-module .navbar {
