--- a/css/06-news.css
+++ b/css/06-news.css
@@ -34,6 +34,7 @@
 /* June Banner */
 
 .background-box {
+margin-left: -3%;
 height: 300px;
 width: 800px;
 background: #363636;
@@ -77,7 +78,7 @@ margin: 120px 0 0 375px;
   border: 1px solid #f8f9f9;
   display: inline-block;
   font-size: 12px;
-  margin: 0 20px 20px 0;
+  margin: 1% 1% 0 0;
   text-align: left;
   padding: 0;
   width: 210px;
@@ -143,7 +144,7 @@ margin: 120px 0 0 375px;
   background-color: #363636;
   border: 1px solid #17202a;
   color:  #ffffff;
-  margin: 0 20px 10px 0;
+  margin: 1% 1% 0 0;
   padding: 60px 10px 15px 10px;
   text-align: center;
   width: 210px;
