--- a/css/02-about-us.css
+++ b/css/02-about-us.css
@@ -61,8 +61,9 @@ h1 {
 
 .text-right {
   color: #bebebe;
-  padding: 0.20%;
-  margin: 40px;
+  /* padding: 0.20%; */
+  margin-top: 40px;
+  margin-right: 40px;
 }
 
 .text-center {
