--- a/css/06-news.css
+++ b/css/06-news.css
@@ -102,7 +102,7 @@ margin: 120px 0 0 375px;
 }
 
 .news-cards .press-play {
-  margin: 20% 0 25% 40%  
+  margin: 20% 0 25% 40%
 
 }
 
@@ -162,6 +162,7 @@ margin: 120px 0 0 375px;
 
 .news-cards .unique-black {
   font-family: serif, Times ;
+  margin: 0 0 0 35px;
   font-size: 16px;
   padding-bottom: 9%;
   text-align: center;
